--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
-__pychache__
-media
-db.sqlite3
-*.log
-*.pot
 *.pyc
-settings.py
+*~
+__pycache__
+myvenv
+db.sqlite3
+/static
+.DS_Store
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
